@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2013  Vasco Nunes, Piotr Ożarowski
 
 
+2013-04-02  Michael Jahn
+	* [1039068] Return the list of films sorted; added sorting by title for result lists
+
 2013-02-21  Michael Jahn
 	* IMDb and Cinemovies movies plugin updated
 
